--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -218,11 +218,11 @@ div.gallery img {
 
 
 div.desc {
-  padding: 10px;
+  padding: 1px;
   text-align: center;
   color: black;
-  margin-bottom: 3%;
-  font-size: 22%;
+  margin-bottom: 2px;
+  font-size: 50%;
   }
 
 
