--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -327,3 +327,67 @@ button[type="submit"]:hover {
   }
 }
 
+footer {
+  background-color: #CCCCCC;
+  font-family: arial;
+  text-align: center;
+  overflow: hidden;
+  font-size: 75%;
+  font-style: normal;
+  width: 100%;
+}
+.footertable {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footertable td, th {
+  border-color: #DDDDDD;
+  border-width: 1px;
+  border-spacing: initial;
+  border-style: solid;
+  text-align: left;
+  vertical-align: top;
+  margin-top: 5px;
+}
+.footertable a {
+  text-decoration: none;
+}
+.footertable a:link, li a:visited, li a:focus {
+  color: #000000;
+}
+.footertable a:hover {
+  cursor: pointer;
+}
+.footertable a:active {
+  color: #666666;
+}
+.footerlinks li {
+  list-style-type: none;
+  display: inline;
+  text-align: center;
+}
+.footerlinks li a {
+  text-decoration: none;
+  margin-left: 5px;
+  margin-right: 5px;
+  float: center;
+  margin-bottom: 5px;
+}
+.footerlinks li a:link, li a:visited, li a:focus {
+  color: #666666;
+}
+.footerlinks li a:hover {
+  cursor: pointer;
+}
+.footerlinks li a:active {
+  color: #AAAAAA;
+}
+
+@media print {
+  .page-break
+    display: block;
+  page-break-after: avoid;
+}
+
+
