--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -76,8 +76,8 @@ body {
 
 /* Style the hamburger menu */
 .topnav a.icon {
- 
-  
+
+  img: url("mstile-150x150.png");
   position: absolute;
  
 }
