--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -572,5 +572,33 @@ a.sidelinks:active {
   float: center;
 }
 
+section {
+  height: 100vh;
+  width: 100%;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.container {
+  width: 90%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0px 0px 20px #00000010;
+  background-color: white;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.container {
+  width: auto;
+  margin: 0 auto;
+  padding: 0 auto;
+  position: left;
+  height: auto;
+  opacity: 1;
+}
 
 
