--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -579,11 +579,11 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
 }
 .container {
-  width: 90%;
-  max-width: 500px;
+  width: 95%;
+  max-width: relative;
   margin: 0 auto;
   padding: 20px;
   box-shadow: 0px 0px 20px #00000010;
