--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -586,14 +586,14 @@ section {
   max-width: auto;
   margin: 0 auto;
   padding: 2px;
-  box-shadow: 0px 0px 12px #00000010;
+  
   background-color: white;
   border-radius: 0px;
   margin-bottom: 20px;
 }
 
 .container {
-  width: auto;
+  width: 100%;
   margin: 0 auto;
   padding: 0 auto;
   position: center;
