--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -203,7 +203,7 @@ float: right;
 padding: 0px;
 width: 100px;
 height: auto;
-bject-fit: contain;
+object-fit: contain;
 }
 
 div.logosmaller {
@@ -225,46 +225,6 @@ padding: 12%;
 }
 
 .button1 {width: 250px;}
-
-
-
-div.gallery {
-   line-height:0;
-   -webkit-column-count:3; /* split it into 3 columns */
-   -webkit-column-gap:5px; /* give it a 5px gap between columns */
-   -moz-column-count:3;
-   -moz-column-gap:5px;
-   column-count:3;
-   column-gap:5px;
-}
-div.gallery img {
-   width: 100% !important;
-   height: 100% !important;
-   margin-bottom:6px; /* to match column gap */
-   white-space: wrap;
-}
-
-
-div.desc {
-  padding: 6px;
-  text-align: center;
-  color: black;
-  margin-bottom: 4px;
-  font-size: 39%;
-  white-space: wrap;
-  width: 90% !important;
-  height: 105% !important;
-  }
-
-
-span {
-    display: inline-block;
-}
-img {
-    width: 99%;
-}
-
-
 
 /* submit form */
 * {
